2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
	* FieldFilter/FieldFilter.m, EntityTypeFilter/EntityTypeSelector.m,
          ContainerFilter/ContainerSelector.m: change filtering method for GCC4

2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
	* General/EntityChunk.[hm]: change signature of filtering method
          (isEntity:laterThan: becames filterEntity:laterThan:)
        * PajeSimulator/SimulChunk.m: use it
        * General/FilteredEnumerator.m: use new signature on performed method

2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
	* General/HierarchyBrowser.m, General/PajeType.m: remove some more
	  GCC4 warnings

2006-03-08  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.h,
	  EntityTypeFilter/EntityTypeSelector.h, NSDate+Additions.m,
	  General/PajeContainer.m, General/PajeEvent.m, General/PajeFilter.h,
	  General/PajeFilter.m, General/PajeType.h,
	  PajeSimulator/SimulContainer.m, SpaceTimeViewer/DrawView.h:
	  remove some warnings when compiling on gcc4

2006-02-10  Benhur Stein <benhur@inf.ufsm.br>
	* GNUmakefile: change installation dir to GNUSTEP_LOCAL_ROOT;
	  installation in GNUSTEP_USER_ROOT is buggy on GNUstep

2006-01-31  Benhur Stein <benhur@inf.ufsm.br>
	* Tracers: new directory
	* Tracers/JRastro: new directory, placeholder for JRastro, a tracer
	  for java programs.

2006-01-30  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/SimulChunk.m: implement missing methods in  EventChunk

2006-01-29  Benhur Stein <benhur@inf.ufsm.br>
        * General/Association.m: retain decoded object
        * General/ChunkArray.m: correct removing of chunks
        * General/EntityChunk: implement NSCopying protocol; do not retain
          entityType and container
        * General/PSortedArray.[hm]: implement NSCopying protocol
        * General/PajeEntity.m: do not encode entityType and container;
          new method setEntityType:
        * General/PajeEntityInspector.m: release filter on dealloc